# CMF-AI-Crypto-Hedge-Fund-Maximov

./: .dockerignore  .gitignore  Dockerfile  README.md  notebook.ipynb  pyproject.toml
data/: aave_usdt.csv  ada_usdt.csv  allo_usdt.csv  apt_usdt.csv  arb_usdt.csv  aster_usdt.csv  avax_usdt.csv  axs_usdt.csv  bch_usdt.csv  bel_usdt.csv  bico_usdt.csv  bio_usdt.csv  bnb_usdt.csv  brev_usdt.csv  btc_usdt.csv  chip_usdt.csv  chz_usdt.csv  crclb_usdt.csv  dash_usdt.csv  dexe_usdt.csv  doge_usdt.csv  dot_usdt.csv  dydx_usdt.csv  eden_usdt.csv  eigen_usdt.csv  ena_usdt.csv  enso_usdt.csv  eth_usdt.csv  ethfi_usdt.csv  fet_usdt.csv  fida_usdt.csv  fil_usdt.csv  hbar_usdt.csv  hei_usdt.csv  hmstr_usdt.csv  home_usdt.csv  icp_usdt.csv  id_usdt.csv  inj_usdt.csv  io_usdt.csv  (+67 more)
scripts/: download_data.py  export_presentation.py
src/fund/: __init__.py  agents.py  backtest.py  data.py  features.py  metrics.py  monitor.py  portfolio.py  universe.py
