[project]
name = "ai-crypto-hedge-fund"
version = "0.1.0"
description = "AI Crypto Hedge Fund — university assignment"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.1.3",
    "pandas==2.2.3",
    "matplotlib==3.9.2",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "statsmodels==0.14.4",
    "arch==7.2.0",
    "ccxt==4.4.50",
]

[dependency-groups]
dev = [
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fund"]
